--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"watch": "run-s clean postcss eleventy:watch",
 		"build": "run-s clean postcss eleventy:build",
 		"debug": "DEBUG=Eleventy* npm run build"
+		
 	},
 	"repository": {
 		"type": "git",
@@ -40,6 +41,7 @@
 		"terser": "^4.8.0"
 	},
 	"dependencies": {
+		"@11tyrocks/eleventy-plugin-social-images": "^0.4.1",
 		"autoprefixer": "^10.2.5",
 		"postcss-import": "^14.0.1",
 		"postcss-nested": "^5.0.5",
