--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -12,7 +12,7 @@ local_backend: true
 collections:
   - label: "Blog"
     name: "blog"
-    folder: "src/posts"
+    folder: "posts"
     create: true
     editor:
       preview: false
