--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"devDependencies": {
 		"@11ty/eleventy": "^1.0.0",
 		"@11ty/eleventy-navigation": "^0.3.2",
+		"@stackbit/sdk": "^0.6.5",
 		"@tailwindcss/typography": "^0.3.1",
 		"cross-env": "^7.0.3",
 		"html-minifier": "^4.0.0",
@@ -42,6 +43,7 @@
 	"dependencies": {
 		"@11tyrocks/eleventy-plugin-social-images": "^0.4.1",
 		"autoprefixer": "^10.2.5",
+		"netlify-cli": "^23.13.0",
 		"netlify-cms-app": "^2.15.68",
 		"postcss-import": "^14.0.1",
 		"postcss-nested": "^5.0.5",
